export default interface Elevator {
  buildingCode: any;
  id: string;
  number: number;
  make?: string;
  model?: string;
  serialNumber?: string;
  description?: string;
}
