export default interface RobotType {
    id: string;
    name: string;
    brand: string;
    model: string;
    typesOfTasks: string[];
  }