export enum TaskStatus {
  Pending,
  Approved,
  In_Execution,
  Completed,
  Denied,
  Planning,
  Planned,
}
