export enum Types {
  PickUpAndDelivery,
  Surveillance,
}
